samples/_failures_safe/1761512230_55adfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1aa6bacd.c: In function ‘main’:
./samples/SAFE/__tmp_1aa6bacd.c:200:9: error: expected declaration or statement at end of input
  200 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_1aa6bacd.c:200:9: error: expected declaration or statement at end of input
